--- a/rpc/Cargo.toml
+++ b/rpc/Cargo.toml
@@ -12,6 +12,11 @@ build = "build.rs"
 log = "0.3"
 serde = "0.8"
 serde_json = "0.8"
+rustc-serialize = "0.3"
+transient-hashmap = "0.1"
+time = "0.1"
+futures = "0.1"
+
 jsonrpc-core = { git = "https://github.com/ethcore/jsonrpc.git" }
 jsonrpc-http-server = { git = "https://github.com/ethcore/jsonrpc.git" }
 jsonrpc-ipc-server = { git = "https://github.com/ethcore/jsonrpc.git" }
@@ -28,15 +33,12 @@ ethjson = { path = "../json" }
 ethcore-devtools = { path = "../devtools" }
 rlp = { path = "../util/rlp" }
 fetch = { path = "../util/fetch" }
-rustc-serialize = "0.3"
-transient-hashmap = "0.1"
-serde_macros = { version = "0.8.0", optional = true }
+serde_macros = { version = "0.8", optional = true }
 clippy = { version = "0.0.103", optional = true}
 ethcore-ipc = { path = "../ipc/rpc" }
-time = "0.1"
 
 [build-dependencies]
-serde_codegen = { version = "0.8.0", optional = true }
+serde_codegen = { version = "0.8", optional = true }
 
 [features]
 default = ["serde_codegen"]
