--- a/rpc_client/Cargo.toml
+++ b/rpc_client/Cargo.toml
@@ -8,7 +8,6 @@ version = "1.4.0"
 
 [dependencies]
 futures = "0.1"
-jsonrpc-core = "3.0.2"
 lazy_static = "0.2.1"
 log = "0.3.6"
 matches = "0.1.2"
@@ -17,6 +16,7 @@ serde = "0.8"
 serde_json = "0.8"
 tempdir = "0.3.5"
 url = "1.2.0"
+jsonrpc-core = { git = "https://github.com/ethcore/jsonrpc.git" }
 ws = { git = "https://github.com/ethcore/ws-rs.git", branch = "mio-upstream-stable" }
 ethcore-rpc = { path = "../rpc" }
 ethcore-signer = { path = "../signer" }
