--- a/updater/Cargo.toml
+++ b/updater/Cargo.toml
@@ -13,6 +13,7 @@ ethcore-ipc-codegen = { path = "../ipc/codegen" }
 log = "0.3"
 ethabi = "0.2.2"
 ethcore = { path = "../ethcore" }
+ethsync = { path = "../sync" }
 ethcore-util = { path = "../util" }
 parity-hash-fetch = { path = "../hash-fetch" }
 ipc-common-types = { path = "../ipc-common-types" }
