Attempt to fix windows CI.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -365,11 +365,11 @@ windows:
     - set RUSTFLAGS=%RUSTFLAGS%
     - rustup default stable-x86_64-pc-windows-msvc
     - cargo build --release #%CARGOFLAGS%
+    - signtool sign /f %keyfile% /p %certpass% target\release\parity.exe
     - target\release\parity.exe tools hash target\release\parity.exe > parity.sha3
-    - set /p SHA3 = < parity.sha3
+    - set /P SHA3=<parity.sha3
     - curl -sL --url "https://github.com/ethcore/win-build/raw/master/SimpleFC.dll" -o nsis\SimpleFC.dll
     - curl -sL --url "https://github.com/ethcore/win-build/raw/master/vc_redist.x64.exe" -o nsis\vc_redist.x64.exe
-    - signtool sign /f %keyfile% /p %certpass% target\release\parity.exe
     - msbuild windows\ptray\ptray.vcxproj /p:Platform=x64 /p:Configuration=Release
     - signtool sign /f %keyfile% /p %certpass% windows\ptray\x64\release\ptray.exe
     - cd nsis
