--- a/Cargo.toml
+++ b/Cargo.toml
@@ -61,7 +61,6 @@ daemonize = "0.2"
 
 [features]
 default = ["ui-precompiled"]
-
 ui = [
 	"dapps",
 	"ethcore-dapps/ui",
@@ -72,7 +71,6 @@ ui-precompiled = [
 	"ethcore-signer/ui-precompiled",
 	"ethcore-dapps/ui-precompiled",
 ]
-
 dapps = ["ethcore-dapps"]
 ipc = ["ethcore/ipc", "ethsync/ipc"]
 jit = ["ethcore/jit"]
@@ -85,6 +83,7 @@ ethstore-cli = ["ethcore/ethstore-cli"]
 evm-debug = ["ethcore/evm-debug"]
 evm-debug-tests = ["ethcore/evm-debug-tests"]
 slow-blocks = ["ethcore/slow-blocks"]
+final = ["ethcore-util/final"]
 
 [[bin]]
 path = "parity/main.rs"
