--- a/updater/Cargo.toml
+++ b/updater/Cargo.toml
@@ -18,6 +18,7 @@ ethcore-util = { path = "../util" }
 parity-hash-fetch = { path = "../hash-fetch" }
 ipc-common-types = { path = "../ipc-common-types" }
 ethcore-ipc = { path = "../ipc/rpc" }
+target_info = "0.1"
 
 [profile.release]
 debug = true
