No need to test windows for every PR.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -426,7 +426,7 @@ test-darwin:
 test-windows:
   stage: test
   only:
-#    - triggers
+    - triggers
   before_script:
     - git submodule update --init --recursive
   script:
