--- a/dapps/Cargo.toml
+++ b/dapps/Cargo.toml
@@ -12,6 +12,7 @@ build = "build.rs"
 rand = "0.3.14"
 log = "0.3"
 env_logger = "0.3"
+futures = "0.1"
 jsonrpc-core = { git = "https://github.com/ethcore/jsonrpc.git" }
 jsonrpc-http-server = { git = "https://github.com/ethcore/jsonrpc.git" }
 hyper = { default-features = false, git = "https://github.com/ethcore/hyper" }
