--- a/util/fetch/Cargo.toml
+++ b/util/fetch/Cargo.toml
@@ -9,8 +9,9 @@ authors = ["Parity Technologies <admin@parity.io>"]
 [dependencies]
 log = "0.3"
 rand = "0.3"
-hyper = { default-features = false, git = "https://github.com/ethcore/hyper" }
-https-fetch = { path = "../https-fetch" }
+reqwest = "0.2"
+futures = "0.1"
+futures-cpupool = "0.1"
 clippy = { version = "0.0.90", optional = true}
 
 [features]
