--- a/rpc/Cargo.toml
+++ b/rpc/Cargo.toml
@@ -35,6 +35,7 @@ ethcore-devtools = { path = "../devtools" }
 parity-updater = { path = "../updater" }
 rlp = { path = "../util/rlp" }
 fetch = { path = "../util/fetch" }
+parity-reactor = { path = "../util/reactor" }
 serde_macros = { version = "0.8.0", optional = true }
 clippy = { version = "0.0.103", optional = true}
 ethcore-ipc = { path = "../ipc/rpc" }
