--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,6 +1,7 @@
 stages:
   - test
   - js-build
+  - push-release
   - build
 variables:
   GIT_DEPTH: "3"
@@ -506,7 +507,6 @@ js-release:
     - master
     - beta
     - stable
-    - triggers
   image: ethcore/rust:stable
   before_script:
     - export JS_FILES_MODIFIED=$(git --no-pager diff --name-only $CI_BUILD_REF^ $CI_BUILD_REF | grep ^js/ | wc -l)
@@ -515,6 +515,17 @@ js-release:
   script:
     - echo $JS_FILES_MODIFIED
     - if [ $JS_FILES_MODIFIED -eq 0 ]; then echo "Skipping JS rebuild since no JS files modified."; else ./js/scripts/build.sh && ./js/scripts/release.sh; fi
-    - curl --data "secret=$RELEASES_SECRET" http://icarus.parity.io:1337/push-release/$CI_BUILD_REF_NAME/$CI_BUILD_REF
   tags:
     - javascript
+push-release:
+  stage: push-release
+  only:
+    - beta
+    - tags
+    - stable
+    - triggers
+  image: ethcore/rust:stable
+  script:
+    - curl --data "secret=$RELEASES_SECRET" http://icarus.parity.io:1337/push-release/$CI_BUILD_REF_NAME/$CI_BUILD_REF
+  tags:
+    - curl
