--- a/hash-fetch/Cargo.toml
+++ b/hash-fetch/Cargo.toml
@@ -12,6 +12,7 @@ futures = "0.1"
 log = "0.3"
 mime = "0.2"
 mime_guess = "1.6.1"
+rand = "0.3"
 rustc-serialize = "0.3"
 fetch = { path = "../util/fetch" }
 ethcore-util = { path = "../util" }
