--- a/util/bigint/Cargo.toml
+++ b/util/bigint/Cargo.toml
@@ -8,7 +8,7 @@ version = "0.1.2"
 authors = ["Parity Technologies <admin@parity.io>"]
 
 [dependencies]
-bigint = { git = "https://github.com/ethcore/bigint" }
+bigint = "1.0"
 rustc-serialize = "0.3"
 heapsize = "0.3"
 rand = "0.3.12"
